# re3-installer

./: .cz.json  .gitignore  .pre-commit-config.yaml  .prettierignore  .wiswa.jsonnet  CHANGELOG.md  CITATION.cff  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  Doxyfile.in  LICENSE.txt  Makefile  NSIS.template.in  README.md  SECURITY.md  env.c  env.h  helpers.c  helpers.h  installer.nsi.in  main.c  mkdir_p.c  mkdir_p.h  package.json  sh.tat.re3-installer.yml  snapcraft.yaml  support.h  vcpkg.json
.claude/agents/: regen.md  release.md  wiswa-sync.md
.claude/skills/ci/: SKILL.md
.github/: copilot-instructions.md
.github/instructions/: general.instructions.md
.github/workflows/: c-cpp.yml  clang-format.yml  cmake.yml  codeql.yml  flatpak.yml  qa.yml  release.yml  snap.yml  tests.yml
man/: re3-installer.1
re3-installer.xcodeproj/: project.pbxproj
src/: CMakeLists.txt  env.c  env.h  extractor.c  extractor.h  helpers.c  helpers.h  installer.c  installer.h  log.c  log.h  main.c  mkdir_p.c  mkdir_p.h  support.h  utils.c  version.rc.in
src/tests/: CMakeLists.txt  env_tests.c  extractor_tests.c  helpers_mock_tests.c  helpers_tests.c  installer_tests.c  mkdir_p_tests.c  utils_functional_tests.c  utils_tests.c
